# particle-life-experiment

./: .gitignore  README.md  build.bat  particlelife_cuda.py
src/: CMakeLists.txt  common.h  kernel.cu  kernel.h  main.cpp  main.cu
